WMV-78: Plugin Edition -MAJOR rearrangement, trying to segregate game-specific files out of the program itself. -New Games project, to hold all the game-specific data. -Removed the old keyboard short-cuts from the Viewer Interface. New shortcuts will be added during testing phase. -Renamed Viewer mode to Creation mode, since it will primarily be used for creating the characters used in Cinema mode. (File and function renaming to come later.) -Started Singleton definition. Currently not thread-safe. -Expanded the ModelViewerModel format a bit. -Better defined operation system identifiers should now detect most supported operating systems automatically. -Linux will now view the log using the "more" command. This makes it so we don't have to define the specific brand of Linux. -Added the font used in the WMV logo in the Splash_001.psd file. -Minor update to the Splash_001.psd to make the white border around "Model Viewer" stand out more. -Tweaks made to the FileFormats document. Switched booleans to flags, fixed some spelling issues.

--- a/Source/Application/Application.vcxproj
+++ b/Source/Application/Application.vcxproj
@@ -203,6 +203,9 @@ copy $(QTDIR)\bin\QtGui4.dll ..\$(OutDir)</Command>
     <ProjectReference Include="..\Foundation\Foundation.vcxproj">
       <Project>{583dceed-978b-493d-b7f3-b54718c46ec3}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\Games\Games.vcxproj">
+      <Project>{01f02fe7-97fa-4f8f-819f-aa7493843fc3}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Interface_Cinema\Interface_Cinema_VC100.vcxproj">
       <Project>{be2e8a7f-8afd-4a57-a0c1-709532446b06}</Project>
     </ProjectReference>
