--- a/Source/Plugins/RenderEngines/OpenGL/OpenGL_VC100.vcxproj
+++ b/Source/Plugins/RenderEngines/OpenGL/OpenGL_VC100.vcxproj
@@ -101,7 +101,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>QT_CORE_LIB;QT_GUI_LIB;_USRDLL;WMV_ENGINE_EXPORTS;OPENGL_PLUGIN_EXPORTS;_WINDOWS;_WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;WINDOWS;WIN32;_WIN32;QT_CORE_LIB;QT_GUI_LIB;_USRDLL;_DEBUG;WMV_ENGINE_EXPORTS;OPENGL_PLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(QTDIR)\include;$(QTDIR)\include\QtCore;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MinimalRebuild>
       </MinimalRebuild>
@@ -122,7 +122,7 @@ copy $(OutDir)$(TargetName)$(TargetExt) ..\..\..\$(OutDir)\Plugins</Command>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>QT_CORE_LIB;QT_GUI_LIB;_USRDLL;OPENGL_PLUGIN_EXPORTS;_WINDOWS;_WIN32;_DEBUG;_WIN64;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;WINDOWS;WIN32;_WIN32;QT_CORE_LIB;QT_GUI_LIB;_USRDLL;WIN64;_WIN64;_DEBUG;OPENGL_PLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(QTDIR)\include;$(QTDIR)\include\QtCore;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -149,7 +149,7 @@ copy $(OutDir)$(TargetName)$(TargetExt) ..\..\..\$(OutDir)\Plugins</Command>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>QT_CORE_LIB;QT_GUI_LIB;_USRDLL;WMV_ENGINE_EXPORTS;OPENGL_PLUGIN_EXPORTS;_WINDOWS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;WINDOWS;WIN32;_WIN32;QT_CORE_LIB;QT_GUI_LIB;_USRDLL;WMV_ENGINE_EXPORTS;OPENGL_PLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(QTDIR)\include;$(QTDIR)\include\QtCore;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MinimalRebuild>
       </MinimalRebuild>
@@ -174,7 +174,7 @@ copy $(OutDir)$(TargetName)$(TargetExt) ..\..\..\$(OutDir)\Plugins</Command>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>QT_CORE_LIB;QT_GUI_LIB;_USRDLL;WMV_ENGINE_EXPORTS;OPENGL_PLUGIN_EXPORTS;_WINDOWS;_WIN32;_WIN64;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;WINDOWS;WIN32;_WIN32;QT_CORE_LIB;QT_GUI_LIB;_USRDLL;WIN64;_WIN64;WMV_ENGINE_EXPORTS;OPENGL_PLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(QTDIR)\include;$(QTDIR)\include\QtCore;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MinimalRebuild>
       </MinimalRebuild>
