--- a/branches/wmv0800_Plugin/Source/Games/StormLib/CMakeLists.txt
+++ b/branches/wmv0800_Plugin/Source/Games/StormLib/CMakeLists.txt
@@ -5,8 +5,6 @@ set(SRC_FILES
            src/adpcm/adpcm.cpp
            src/huffman/huff.cpp
            src/jenkins/lookup3.c
-           src/libtomcrypt/src/misc/crypt_libc.c
-           src/libtomcrypt/src/pk/rsa/rsa_verify_simple.c
            src/lzma/C/LzFind.c
            src/lzma/C/LzmaDec.c
            src/lzma/C/LzmaEnc.c
@@ -44,6 +42,7 @@ set(TOMCRYPT_FILES
            src/libtomcrypt/src/misc/crypt_find_prng.c
            src/libtomcrypt/src/misc/crypt_hash_descriptor.c
            src/libtomcrypt/src/misc/crypt_hash_is_valid.c
+           src/libtomcrypt/src/misc/crypt_libc.c
            src/libtomcrypt/src/misc/crypt_ltc_mp_descriptor.c
            src/libtomcrypt/src/misc/crypt_prng_descriptor.c
            src/libtomcrypt/src/misc/crypt_prng_is_valid.c
@@ -91,6 +90,7 @@ set(TOMCRYPT_FILES
            src/libtomcrypt/src/pk/rsa/rsa_import.c
            src/libtomcrypt/src/pk/rsa/rsa_make_key.c
            src/libtomcrypt/src/pk/rsa/rsa_verify_hash.c
+           src/libtomcrypt/src/pk/rsa/rsa_verify_simple.c
 )
 
 set(TOMMATH_FILES
@@ -266,26 +266,30 @@ if (${CMAKE_SYSTEM_NAME} STREQUAL Linux)
     endif()
 endif()
 
-add_library(StormLib SHARED ${SRC_FILES} ${SRC_ADDITIONAL_FILES})
-target_link_libraries(StormLib ${LINK_LIBS})
+add_library(storm SHARED ${SRC_FILES} ${SRC_ADDITIONAL_FILES})
+target_link_libraries(storm ${LINK_LIBS})
 
-add_library(StormLib_static STATIC ${SRC_FILES} ${SRC_ADDITIONAL_FILES})
-target_link_libraries(StormLib_static ${LINK_LIBS})
-set_target_properties(StormLib_static PROPERTIES OUTPUT_NAME StormLib)
-
-#add_executable(StormLib_test ${TEST_SRC_FILES})
-#target_link_libraries(StormLib_test StormLib_static)
+option(WITH_TEST "Compile Test application" OFF)
+if(WITH_TEST)
+     add_executable(storm_test ${TEST_SRC_FILES})
+     target_link_libraries(storm_test storm)
+endif()
 
 if(APPLE)
-    set_target_properties(StormLib PROPERTIES FRAMEWORK true)
-    set_target_properties(StormLib PROPERTIES PUBLIC_HEADER "src/StormLib.h src/StormPort.h")
-    set_target_properties(StormLib PROPERTIES LINK_FLAGS "-framework Carbon")
+    set_target_properties(storm PROPERTIES FRAMEWORK true)
+    set_target_properties(storm PROPERTIES PUBLIC_HEADER "src/StormLib.h src/StormPort.h")
+    set_target_properties(storm PROPERTIES LINK_FLAGS "-framework Carbon")
 endif()
 
 if(UNIX)
-    set_target_properties(StormLib PROPERTIES SOVERSION 0)
+    set_target_properties(storm PROPERTIES SOVERSION 0)
 endif()
 
-install(TARGETS StormLib StormLib_static RUNTIME DESTINATION ${WMV_BASE_DEST_DIR}/bin LIBRARY DESTINATION ${WMV_BASE_DEST_DIR}/lib ARCHIVE DESTINATION ${WMV_BASE_DEST_DIR}/lib)
-install(FILES src/StormLib.h src/StormPort.h DESTINATION ${WMV_BASE_DEST_DIR}/include)
+# On Win32, build StormLib.dll since we don't want to clash with Storm.dll
+if(WIN32)
+    set_target_properties(storm PROPERTIES OUTPUT_NAME StormLib)
+endif()
+
+install(TARGETS storm RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib FRAMEWORK DESTINATION /Library/Frameworks)
+install(FILES src/StormLib.h src/StormPort.h DESTINATION include)
 
